Infrastructure/cdk.out/localstack.template.json
{
 "Resources": {
  "ClientManagementVpc39FCA31B": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ClientManagementVpc"
     }
    ]
   }
  },
  "ClientManagementVpcPublicSubnet1SubnetB644864C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "ClientManagementVpcPublicSubnet1RouteTable5ED84B59": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "ClientManagementVpcPublicSubnet1RouteTableAssociationE009289D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientManagementVpcPublicSubnet1RouteTable5ED84B59"
    },
    "SubnetId": {
     "Ref": "ClientManagementVpcPublicSubnet1SubnetB644864C"
    }
   }
  },
  "ClientManagementVpcPublicSubnet1DefaultRoute622ABFF2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ClientManagementVpcIGWFD0F0998"
    },
    "RouteTableId": {
     "Ref": "ClientManagementVpcPublicSubnet1RouteTable5ED84B59"
    }
   },
   "DependsOn": [
    "ClientManagementVpcVPCGWE1399E18"
   ]
  },
  "ClientManagementVpcPublicSubnet1EIP0D1BF138": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PublicSubnet1"
     }
    ]
   }
  },
  "ClientManagementVpcPublicSubnet1NATGateway437EFC0E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ClientManagementVpcPublicSubnet1EIP0D1BF138",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ClientManagementVpcPublicSubnet1SubnetB644864C"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "ClientManagementVpcPublicSubnet1DefaultRoute622ABFF2",
    "ClientManagementVpcPublicSubnet1RouteTableAssociationE009289D"
   ]
  },
  "ClientManagementVpcPublicSubnet2Subnet00FA3A59": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "ClientManagementVpcPublicSubnet2RouteTable75D5D427": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "ClientManagementVpcPublicSubnet2RouteTableAssociation983A0D54": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientManagementVpcPublicSubnet2RouteTable75D5D427"
    },
    "SubnetId": {
     "Ref": "ClientManagementVpcPublicSubnet2Subnet00FA3A59"
    }
   }
  },
  "ClientManagementVpcPublicSubnet2DefaultRoute031F5AD8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ClientManagementVpcIGWFD0F0998"
    },
    "RouteTableId": {
     "Ref": "ClientManagementVpcPublicSubnet2RouteTable75D5D427"
    }
   },
   "DependsOn": [
    "ClientManagementVpcVPCGWE1399E18"
   ]
  },
  "ClientManagementVpcPublicSubnet2EIPEAF84CEE": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PublicSubnet2"
     }
    ]
   }
  },
  "ClientManagementVpcPublicSubnet2NATGateway78F509DC": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ClientManagementVpcPublicSubnet2EIPEAF84CEE",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ClientManagementVpcPublicSubnet2Subnet00FA3A59"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "ClientManagementVpcPublicSubnet2DefaultRoute031F5AD8",
    "ClientManagementVpcPublicSubnet2RouteTableAssociation983A0D54"
   ]
  },
  "ClientManagementVpcPrivateSubnet1Subnet7674E182": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "ClientManagementVpcPrivateSubnet1RouteTable8AA1F1B0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "ClientManagementVpcPrivateSubnet1RouteTableAssociation71DC3D33": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientManagementVpcPrivateSubnet1RouteTable8AA1F1B0"
    },
    "SubnetId": {
     "Ref": "ClientManagementVpcPrivateSubnet1Subnet7674E182"
    }
   }
  },
  "ClientManagementVpcPrivateSubnet1DefaultRoute58DB6BCF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ClientManagementVpcPublicSubnet1NATGateway437EFC0E"
    },
    "RouteTableId": {
     "Ref": "ClientManagementVpcPrivateSubnet1RouteTable8AA1F1B0"
    }
   }
  },
  "ClientManagementVpcPrivateSubnet2SubnetAC524F80": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "ClientManagementVpcPrivateSubnet2RouteTableE6104FAD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/ClientManagementVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "ClientManagementVpcPrivateSubnet2RouteTableAssociation22F794B3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientManagementVpcPrivateSubnet2RouteTableE6104FAD"
    },
    "SubnetId": {
     "Ref": "ClientManagementVpcPrivateSubnet2SubnetAC524F80"
    }
   }
  },
  "ClientManagementVpcPrivateSubnet2DefaultRoute1079349B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ClientManagementVpcPublicSubnet2NATGateway78F509DC"
    },
    "RouteTableId": {
     "Ref": "ClientManagementVpcPrivateSubnet2RouteTableE6104FAD"
    }
   }
  },
  "ClientManagementVpcIGWFD0F0998": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ClientManagementVpc"
     }
    ]
   }
  },
  "ClientManagementVpcVPCGWE1399E18": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ClientManagementVpcIGWFD0F0998"
    },
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "AuthServiceDBSubnetGroupCFE5A552": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for AuthServiceDB database",
    "SubnetIds": [
     {
      "Ref": "ClientManagementVpcPrivateSubnet1Subnet7674E182"
     },
     {
      "Ref": "ClientManagementVpcPrivateSubnet2SubnetAC524F80"
     }
    ]
   }
  },
  "AuthServiceDBSecurityGroupBE6D28EB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for AuthServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBSecretAttachmentF30406A9": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuthServiceDBC6B688BA"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "AuthServiceDBC6B688BA": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "AuthServiceDBSubnetGroupCFE5A552"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "AuthServiceDBSecurityGroupBE6D28EB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClientServiceDBSubnetGroupAD7D2519": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for ClientServiceDB database",
    "SubnetIds": [
     {
      "Ref": "ClientManagementVpcPrivateSubnet1Subnet7674E182"
     },
     {
      "Ref": "ClientManagementVpcPrivateSubnet2SubnetAC524F80"
     }
    ]
   }
  },
  "ClientServiceDBSecurityGroup523E4BE4": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for ClientServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "localstackClientServiceDBSecretEACBEA5E3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClientServiceDBSecretAttachment91516957": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackClientServiceDBSecretEACBEA5E3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "ClientServiceDB25A4194A"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "ClientServiceDB25A4194A": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "Client-service-db",
    "DBSubnetGroupName": {
     "Ref": "ClientServiceDBSubnetGroupAD7D2519"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackClientServiceDBSecretEACBEA5E3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "ClientServiceDBSecurityGroup523E4BE4",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDbHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "ClientServiceDbHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "ClientServiceDB25A4194A",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "ClientServiceDB25A4194A",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "BrokerAZDistribution": "DEFAULT",
     "ClientSubnets": [
      {
       "Ref": "ClientManagementVpcPrivateSubnet1Subnet7674E182"
      },
      {
       "Ref": "ClientManagementVpcPrivateSubnet2SubnetAC524F80"
      }
     ],
     "InstanceType": "kafka.m5.xlarge"
    },
    "ClusterName": "kafka-cluster",
    "KafkaVersion": "2.8.0",
    "NumberOfBrokerNodes": 1
   }
  },
  "ClientManagementCluster284D8C06": {
   "Type": "AWS::ECS::Cluster"
  },
  "ClientManagementClusterDefaultServiceDiscoveryNamespace7909C7D7": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "Client-managemnt.local",
    "Vpc": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "AuthServiceTaskTaskRoleE466B974": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AuthServiceTask82E6680D": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "SPIRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "AuthServiceDBSecretAttachmentF30406A9"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "JWT_SECRET",
        "Value": "SNFWEBQN2IBAANSDABD8WEW28E74RRFSSDADMJ9R28EQIE23RHQN"
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin_user"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       },
       {
        "Name": "SPRIN_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgresql://",
           {
            "Fn::GetAtt": [
             "AuthServiceDBC6B688BA",
             "Endpoint.Address"
            ]
           },
           ":",
           {
            "Fn::GetAtt": [
             "AuthServiceDBC6B688BA",
             "Endpoint.Port"
            ]
           },
           "/auth-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMOUT",
        "Value": "60000"
       }
      ],
      "Essential": true,
      "Image": "auth-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "AuthServiceLogGroup34125B38"
        },
        "awslogs-stream-prefix": "auth-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "auth-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4005,
        "HostPort": 4005,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "AuthServiceTaskExecutionRoleA1258495",
      "Arn"
     ]
    },
    "Family": "localstackAuthServiceTask4114E6CA",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "AuthServiceTaskTaskRoleE466B974",
      "Arn"
     ]
    }
   }
  },
  "AuthServiceTaskExecutionRoleA1258495": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AuthServiceTaskExecutionRoleDefaultPolicyF20AD0D3": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "AuthServiceLogGroup34125B38",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "AuthServiceTaskExecutionRoleDefaultPolicyF20AD0D3",
    "Roles": [
     {
      "Ref": "AuthServiceTaskExecutionRoleA1258495"
     }
    ]
   }
  },
  "AuthServiceLogGroup34125B38": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/auth-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthService3C2B741A": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClientManagementCluster284D8C06"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "AuthServiceSecurityGroup67F2FA7D",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ClientManagementVpcPrivateSubnet1Subnet7674E182"
       },
       {
        "Ref": "ClientManagementVpcPrivateSubnet2SubnetAC524F80"
       }
      ]
     }
    },
    "ServiceName": "auth-service",
    "TaskDefinition": {
     "Ref": "AuthServiceTask82E6680D"
    }
   },
   "DependsOn": [
    "AuthServiceDBC6B688BA",
    "AuthServiceDBSecretAttachmentF30406A9",
    "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb",
    "AuthServiceDBSecurityGroupBE6D28EB",
    "AuthServiceDBSubnetGroupCFE5A552",
    "AuthServiceDbHealthCheck",
    "AuthServiceTaskTaskRoleE466B974"
   ]
  },
  "AuthServiceSecurityGroup67F2FA7D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/AuthService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   },
   "DependsOn": [
    "AuthServiceDBC6B688BA",
    "AuthServiceDBSecretAttachmentF30406A9",
    "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb",
    "AuthServiceDBSecurityGroupBE6D28EB",
    "AuthServiceDBSubnetGroupCFE5A552",
    "AuthServiceDbHealthCheck",
    "AuthServiceTaskTaskRoleE466B974"
   ]
  },
  "BillingServiceTaskTaskRole7A547BBF": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "BillingServiceTask30D9C66E": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "billing-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "BillingServiceLogGroupDD61E740"
        },
        "awslogs-stream-prefix": "billing-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "billing-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4001,
        "HostPort": 4001,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 9001,
        "HostPort": 9001,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "BillingServiceTaskExecutionRole11FE8DE2",
      "Arn"
     ]
    },
    "Family": "localstackBillingServiceTaskAB0446C6",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "BillingServiceTaskTaskRole7A547BBF",
      "Arn"
     ]
    }
   }
  },
  "BillingServiceTaskExecutionRole11FE8DE2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "BillingServiceTaskExecutionRoleDefaultPolicy4F4033C9": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "BillingServiceLogGroupDD61E740",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "BillingServiceTaskExecutionRoleDefaultPolicy4F4033C9",
    "Roles": [
     {
      "Ref": "BillingServiceTaskExecutionRole11FE8DE2"
     }
    ]
   }
  },
  "BillingServiceLogGroupDD61E740": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/billing-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "BillingServiceFEB36D90": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClientManagementCluster284D8C06"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "BillingServiceSecurityGroup3783AD35",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ClientManagementVpcPrivateSubnet1Subnet7674E182"
       },
       {
        "Ref": "ClientManagementVpcPrivateSubnet2SubnetAC524F80"
       }
      ]
     }
    },
    "ServiceName": "billing-service",
    "TaskDefinition": {
     "Ref": "BillingServiceTask30D9C66E"
    }
   },
   "DependsOn": [
    "BillingServiceTaskTaskRole7A547BBF"
   ]
  },
  "BillingServiceSecurityGroup3783AD35": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/BillingService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   },
   "DependsOn": [
    "BillingServiceTaskTaskRole7A547BBF"
   ]
  },
  "AnalyticsServiceTaskTaskRole1ABB10CB": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AnalyticsServiceTaskC3AFBC47": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "analytics-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "AnalyticsServiceLogGroupBD82F12A"
        },
        "awslogs-stream-prefix": "analytics-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "analytics-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4002,
        "HostPort": 4002,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "AnalyticsServiceTaskExecutionRoleBAF654B2",
      "Arn"
     ]
    },
    "Family": "localstackAnalyticsServiceTask353A5B10",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "AnalyticsServiceTaskTaskRole1ABB10CB",
      "Arn"
     ]
    }
   }
  },
  "AnalyticsServiceTaskExecutionRoleBAF654B2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AnalyticsServiceTaskExecutionRoleDefaultPolicy99868928": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "AnalyticsServiceLogGroupBD82F12A",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "AnalyticsServiceTaskExecutionRoleDefaultPolicy99868928",
    "Roles": [
     {
      "Ref": "AnalyticsServiceTaskExecutionRoleBAF654B2"
     }
    ]
   }
  },
  "AnalyticsServiceLogGroupBD82F12A": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/analytics-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AnalyticsServiceCD38C492": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClientManagementCluster284D8C06"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "AnalyticsServiceSecurityGroupBA6AE98A",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ClientManagementVpcPrivateSubnet1Subnet7674E182"
       },
       {
        "Ref": "ClientManagementVpcPrivateSubnet2SubnetAC524F80"
       }
      ]
     }
    },
    "ServiceName": "analytics-service",
    "TaskDefinition": {
     "Ref": "AnalyticsServiceTaskC3AFBC47"
    }
   },
   "DependsOn": [
    "AnalyticsServiceTaskTaskRole1ABB10CB",
    "MskCluster"
   ]
  },
  "AnalyticsServiceSecurityGroupBA6AE98A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/AnalyticsService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   },
   "DependsOn": [
    "AnalyticsServiceTaskTaskRole1ABB10CB",
    "MskCluster"
   ]
  },
  "ClientServiceTaskTaskRole859A8D1C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ClientServiceTask004C0B7F": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "BILLING_SERVICE_GRPC_PORT",
        "Value": "9001"
       },
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "SPIRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "ClientServiceDBSecretAttachment91516957"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin_user"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       },
       {
        "Name": "BILLING_SERVICE_ADDRESS",
        "Value": "host.docker.internal"
       },
       {
        "Name": "SPRIN_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgresql://",
           {
            "Fn::GetAtt": [
             "ClientServiceDB25A4194A",
             "Endpoint.Address"
            ]
           },
           ":",
           {
            "Fn::GetAtt": [
             "ClientServiceDB25A4194A",
             "Endpoint.Port"
            ]
           },
           "/patient-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMOUT",
        "Value": "60000"
       }
      ],
      "Essential": true,
      "Image": "patient-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ClientServiceLogGroup10401AD4"
        },
        "awslogs-stream-prefix": "patient-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "patient-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4000,
        "HostPort": 4000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ClientServiceTaskExecutionRoleB0F6A5AD",
      "Arn"
     ]
    },
    "Family": "localstackClientServiceTaskB6D82965",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ClientServiceTaskTaskRole859A8D1C",
      "Arn"
     ]
    }
   }
  },
  "ClientServiceTaskExecutionRoleB0F6A5AD": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ClientServiceTaskExecutionRoleDefaultPolicy7FE94B64": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ClientServiceLogGroup10401AD4",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ClientServiceTaskExecutionRoleDefaultPolicy7FE94B64",
    "Roles": [
     {
      "Ref": "ClientServiceTaskExecutionRoleB0F6A5AD"
     }
    ]
   }
  },
  "ClientServiceLogGroup10401AD4": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/patient-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ClientService299188C5": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClientManagementCluster284D8C06"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ClientServiceSecurityGroup2BE12DA3",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ClientManagementVpcPrivateSubnet1Subnet7674E182"
       },
       {
        "Ref": "ClientManagementVpcPrivateSubnet2SubnetAC524F80"
       }
      ]
     }
    },
    "ServiceName": "patient-service",
    "TaskDefinition": {
     "Ref": "ClientServiceTask004C0B7F"
    }
   },
   "DependsOn": [
    "BillingServiceSecurityGroup3783AD35",
    "BillingServiceFEB36D90",
    "ClientServiceDB25A4194A",
    "ClientServiceDBSecretAttachment91516957",
    "localstackClientServiceDBSecretEACBEA5E3fdaad7efa858a3daf9490cf0a702aeb",
    "ClientServiceDBSecurityGroup523E4BE4",
    "ClientServiceDBSubnetGroupAD7D2519",
    "ClientServiceDbHealthCheck",
    "ClientServiceTaskTaskRole859A8D1C",
    "MskCluster"
   ]
  },
  "ClientServiceSecurityGroup2BE12DA3": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/ClientService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   },
   "DependsOn": [
    "BillingServiceSecurityGroup3783AD35",
    "BillingServiceFEB36D90",
    "ClientServiceDB25A4194A",
    "ClientServiceDBSecretAttachment91516957",
    "localstackClientServiceDBSecretEACBEA5E3fdaad7efa858a3daf9490cf0a702aeb",
    "ClientServiceDBSecurityGroup523E4BE4",
    "ClientServiceDBSubnetGroupAD7D2519",
    "ClientServiceDbHealthCheck",
    "ClientServiceTaskTaskRole859A8D1C",
    "MskCluster"
   ]
  },
  "ApiGatewayTaskDefinitionTaskRole78FC06E2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ApiGatewayTaskDefinitionBB9A2505": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_PROFILES_ACTIVE",
        "Value": "prod"
       },
       {
        "Name": "AUTH_SERVICE_URL",
        "Value": "http://host.docker.internal:4005"
       }
      ],
      "Essential": true,
      "Image": "api-gateway",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ApiGatewayLogGroupA9770429"
        },
        "awslogs-stream-prefix": "api-gateway",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "APIGatewayContainer",
      "PortMappings": [
       {
        "ContainerPort": 4004,
        "HostPort": 4004,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ApiGatewayTaskDefinitionExecutionRoleE78CB745",
      "Arn"
     ]
    },
    "Family": "localstackApiGatewayTaskDefinition2CA71C36",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ApiGatewayTaskDefinitionTaskRole78FC06E2",
      "Arn"
     ]
    }
   }
  },
  "ApiGatewayTaskDefinitionExecutionRoleE78CB745": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ApiGatewayTaskDefinitionExecutionRoleDefaultPolicy3FBBB1F9": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ApiGatewayLogGroupA9770429",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ApiGatewayTaskDefinitionExecutionRoleDefaultPolicy3FBBB1F9",
    "Roles": [
     {
      "Ref": "ApiGatewayTaskDefinitionExecutionRoleE78CB745"
     }
    ]
   }
  },
  "ApiGatewayLogGroupA9770429": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/api-gateway",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ApiGatewayServiceLB661D42EC": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "ApiGatewayServiceLBSecurityGroup0E508841",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "ClientManagementVpcPublicSubnet1SubnetB644864C"
     },
     {
      "Ref": "ClientManagementVpcPublicSubnet2Subnet00FA3A59"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "ClientManagementVpcPublicSubnet1DefaultRoute622ABFF2",
    "ClientManagementVpcPublicSubnet1RouteTableAssociationE009289D",
    "ClientManagementVpcPublicSubnet2DefaultRoute031F5AD8",
    "ClientManagementVpcPublicSubnet2RouteTableAssociation983A0D54"
   ]
  },
  "ApiGatewayServiceLBSecurityGroup0E508841": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB localstackApiGatewayServiceLBD935C10B",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "ApiGatewayServiceLBSecurityGrouptolocalstackApiGatewayServiceSecurityGroup47EA876B40040666B611": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "ApiGatewayServiceSecurityGroup867C9DB1",
      "GroupId"
     ]
    },
    "FromPort": 4004,
    "GroupId": {
     "Fn::GetAtt": [
      "ApiGatewayServiceLBSecurityGroup0E508841",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 4004
   }
  },
  "ApiGatewayServiceLBPublicListenerA86B9BC4": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "ApiGatewayServiceLBPublicListenerECSGroup0BFE5495"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "ApiGatewayServiceLB661D42EC"
    },
    "Port": 80,
    "Protocol": "HTTP"
   }
  },
  "ApiGatewayServiceLBPublicListenerECSGroup0BFE5495": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   }
  },
  "ApiGatewayService4908847F": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClientManagementCluster284D8C06"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "APIGatewayContainer",
      "ContainerPort": 4004,
      "TargetGroupArn": {
       "Ref": "ApiGatewayServiceLBPublicListenerECSGroup0BFE5495"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ApiGatewayServiceSecurityGroup867C9DB1",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ClientManagementVpcPrivateSubnet1Subnet7674E182"
       },
       {
        "Ref": "ClientManagementVpcPrivateSubnet2SubnetAC524F80"
       }
      ]
     }
    },
    "ServiceName": "api-gateway",
    "TaskDefinition": {
     "Ref": "ApiGatewayTaskDefinitionBB9A2505"
    }
   },
   "DependsOn": [
    "ApiGatewayServiceLBPublicListenerECSGroup0BFE5495",
    "ApiGatewayServiceLBPublicListenerA86B9BC4",
    "ApiGatewayTaskDefinitionTaskRole78FC06E2"
   ]
  },
  "ApiGatewayServiceSecurityGroup867C9DB1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/ApiGatewayService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ClientManagementVpc39FCA31B"
    }
   },
   "DependsOn": [
    "ApiGatewayTaskDefinitionTaskRole78FC06E2"
   ]
  },
  "ApiGatewayServiceSecurityGroupfromlocalstackApiGatewayServiceLBSecurityGroup008100C94004D3A7817C": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 4004,
    "GroupId": {
     "Fn::GetAtt": [
      "ApiGatewayServiceSecurityGroup867C9DB1",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ApiGatewayServiceLBSecurityGroup0E508841",
      "GroupId"
     ]
    },
    "ToPort": 4004
   },
   "DependsOn": [
    "ApiGatewayTaskDefinitionTaskRole78FC06E2"
   ]
  }
 },
 "Outputs": {
  "ApiGatewayServiceLoadBalancerDNS40D66446": {
   "Value": {
    "Fn::GetAtt": [
     "ApiGatewayServiceLB661D42EC",
     "DNSName"
    ]
   }
  },
  "ApiGatewayServiceServiceURL8E0540A6": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "ApiGatewayServiceLB661D42EC",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 }
}
